# sof

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.claude/: settings.local.json
docs/: ANALYSIS.md  ASSETS.md  FORMATS.md  FUNCTIONS.md  INTERFACES.md  NETWORKING.md  SOUND.md  TECHNICAL.md
src/client/: cl_input.c  console.c  console.h  in_sdl.c  keys.c  keys.h
src/common/: pmove.c  q_shared.c  q_shared.h  qcommon.h  sof_types.h
src/engine/: cm_trace.c  cmd.c  common.c  cvar.c  files.c  main.c  net_msg.c  sys_sdl.c  win32_compat.h  z_zone.c
src/game/: g_ai.c  g_local.h  g_main.c  g_phys.c  g_script.c  g_spawn.c
src/ghoul/: ghoul.h  ghoul_main.c
src/renderer/: r_bsp.c  r_bsp.h  r_image.c  r_light.c  r_local.h  r_main.c  r_model.c  r_surf.c
src/server/: sv_game.c  sv_world.c
src/sound/: snd_local.h  snd_sdl.c
tools/: extract_imports.py  isextract.py  pe_analyze.py
